# RoboCorea

./: .gitignore
firmware/ESP/: README.md  platformio.ini
firmware/ESP/include/: config.h  robot_types.h
firmware/ESP/lib/CANInterface/: CANInterface.cpp  CANInterface.h
firmware/ESP/lib/Comms/: Comms.cpp  Comms.h
firmware/ESP/lib/Control/: Control.cpp  Control.h  FlipperCollision.h
firmware/ESP/lib/Locomotion/: Locomotion.cpp  Locomotion.h
firmware/ESP/lib/PID/: PID.cpp  PID.h
firmware/ESP/lib/RC/: RC.cpp  RC.h
firmware/ESP/lib/Sensors/: Sensors.cpp  Sensors.h
firmware/ESP/src/: main.cpp
firmware/VESC/: README.md  flipper_position.lisp
reference/: architecture.md
reference/old_codes/: 1.ino  2.ino  3.lisp  5.ino
software/ros2_ws/src/arm_description/: CMakeLists.txt  README.md  package.xml
software/ros2_ws/src/arm_description/launch/: display.launch.py
software/ros2_ws/src/arm_description/meshes/collision/: Flipper3L.stl  Flipper4L.stl  base_link.stl
software/ros2_ws/src/arm_description/scripts/: make_body_collision.py
software/ros2_ws/src/arm_description/urdf/: dicerox_full.urdf
software/ros2_ws/src/arm_teleop/: README.md  package.xml  setup.py
software/ros2_ws/src/arm_teleop/arm_teleop/: arm_ik.py  arm_kinematics.py  arm_planner.py  body_collision.py  flipper_state.py  joystick_servo.py  keyboard_servo.py  sdls_servo.py  self_collision.py
software/ros2_ws/src/arm_teleop/config/: servo_params.yaml
software/ros2_ws/src/arm_teleop/launch/: joystick.launch.py  keyboard.launch.py  servo.launch.py  twin.launch.py
software/ros2_ws/src/arm_teleop/meshes/collision/: Link1.stl  Link2.stl  Link3.stl  Link4.stl  Link5.stl  Link6.stl
software/ros2_ws/src/arm_teleop/meshes/collision_lowpoly/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL
software/ros2_ws/src/arm_teleop/rviz/: twin.rviz
software/ros2_ws/src/arm_teleop/scripts/: make_collision_meshes.py
software/ros2_ws/src/arm_teleop/urdf/: dicerox_arm.urdf
software/ros2_ws/src/dicerox_mapping/: CMakeLists.txt  README.md  package.xml
software/ros2_ws/src/dicerox_mapping/config/: slam_toolbox_localization.yaml  slam_toolbox_params.yaml
software/ros2_ws/src/dicerox_mapping/launch/: mapping.launch.py  mapping_debug_viz.launch.py  mapping_robot.launch.py  mapping_viz.launch.py  record_bag.launch.py  save_map.launch.py
software/ros2_ws/src/dicerox_mapping/rviz/: map_only.rviz  mapping.rviz
software/ros2_ws/src/dicerox_mapping/scripts/: scan_frame_republisher.py  zed_planar_odom_node.py
software/ros2_ws/src/esp32_bridge/: README.md  package.xml  setup.py
software/ros2_ws/src/esp32_bridge/esp32_bridge/: can_presence_check.py  main_bridge.py  protocol.py
software/ros2_ws/src/esp32_bridge/launch/: esp32_bridge.launch.py
software/ros2_ws/src/esp32_bridge/test/: test_protocol.py
software/ros2_ws/src/gui/: CMakeLists.txt  README.md  package.xml
software/ros2_ws/src/gui/assets/audio/: README.md
software/ros2_ws/src/gui/assets/vision/: README.md
software/ros2_ws/src/gui/include/gui/: app_settings.hpp  arm_pose_panel.hpp  camera_hub.hpp  dashboard_panel.hpp  digital_twin_panel.hpp  filter_registry.hpp  filters.hpp  gst_av_stream.hpp  main_window.hpp  map_window.hpp  odometry_panel.hpp  ppm_calib_dialog.hpp  settings_dialog.hpp  source_manager.hpp  speech_processor.hpp  urdf_viewer.hpp  video_panel.hpp  video_widget.hpp
software/ros2_ws/src/gui/launch/: bringup.launch.py  gui.launch.py
software/ros2_ws/src/gui/scripts/: c920_srt_stream.sh
software/ros2_ws/src/gui/src/: app_settings.cpp  arm_pose_panel.cpp  camera_hub.cpp  dashboard_panel.cpp  filters.cpp  gst_av_stream.cpp  gui.cpp  main_window.cpp  map_window.cpp  odometry_panel.cpp  ppm_calib_dialog.cpp  settings_dialog.cpp  source_manager.cpp  speech_processor.cpp  urdf_viewer.cpp  video_panel.cpp  video_widget.cpp
software/ros2_ws/src/jetson_sensors/: README.md  package.xml  setup.cfg  setup.py
software/ros2_ws/src/jetson_sensors/config/: jetson_sensors.yaml
software/ros2_ws/src/jetson_sensors/jetson_sensors/: common.py  lis3mdl_node.py  mlx90640_node.py  thermal_visualizer_node.py
software/ros2_ws/src/jetson_sensors/launch/: jetson_sensors.launch.py  thermal.launch.py  visualizer.launch.py
software/ros2_ws/src/jetson_sensors/test/: test_thermal_pipeline.py
software/ros2_ws/src/rescue_bringup/rescue_bringup/: robot_manager.py
software/ros2_ws/src/rescue_bringup/systemd/: README.md  rescue-mapping.service  zed.service
software/ros2_ws/src/rescue_interfaces/: CMakeLists.txt  package.xml
software/ros2_ws/src/rescue_interfaces/srv/: DeletePose.srv  GoToPose.srv  ListPoses.srv  SavePose.srv
software/ros2_ws/src/rescue_nav/: README.md  package.xml  setup.cfg  setup.py
software/ros2_ws/src/rescue_nav/config/: ekf.yaml  nav2_params.yaml
software/ros2_ws/src/rescue_nav/launch/: demo.launch.py  mapping_ekf.launch.py  nav2.launch.py  odom_fusion.launch.py  sim.launch.py  slam_sim.launch.py
software/ros2_ws/src/rescue_nav/maps/: README.md
software/ros2_ws/src/rescue_nav/rescue_nav/: adaptive_odom_covariance.py  waypoint_runner.py
software/ros2_ws/src/rescue_nav/rviz/: nav.rviz
software/ros2_ws/src/rescue_nav/urdf/: robot_sim.urdf.xacro
software/ros2_ws/src/rescue_nav/worlds/: track.world
