<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_teleop</name>
  <version>0.1.0</version>
  <description>
    Singularity-robust real-time servo for the dicerox 6R arm. An SVD
    selectively-damped differential-IK node (sdls_servo) maps a Cartesian twist
    to joint motion and publishes the result on /joint_states (which esp32_bridge
    forwards to the ESP32 as MSG_ARM_JOINTS). Includes keyboard and joystick
    teleop. No MoveIt / ros2_control dependency.
  </description>
  <maintainer email="nabetse069@gmail.com">RoboCorea</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rescue_interfaces</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- Combined robot URDF + chassis/flipper meshes for the digital twin and the
       arm-vs-body collision checker. -->
  <exec_depend>arm_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- joy is for the optional joystick.launch.py teleop (soft/toggleable). The
       workstation bring-up that also starts the GUI now lives in the gui package
       (gui/bringup.launch.py), so arm_teleop no longer depends on gui. -->
  <exec_depend>joy</exec_depend>
  <!-- Optional, for mesh-on-mesh self-collision avoidance (sdls_servo
       collision_check). pip-only, no rosdep key: `pip install python-fcl trimesh`.
       If absent the servo logs a warning and runs without collision checking. -->
  <!-- <exec_depend>python-fcl</exec_depend> -->
  <!-- <exec_depend>trimesh</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
